First test was fired